public/v/release-4.6/_sources/repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_dnn_stereo_depth> <isaac_ros_foundationstereo>`

Quickstart
----------

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Download Quickstart Assets
^^^^^^^^^^^^^^^^^^^^^^^^^^

#. Download quickstart data from NGC:

   :ir_assets:`<isaac_ros_foundationstereo> <quickstart.tar.gz>`

Build |package_name|
^^^^^^^^^^^^^^^^^^^^

.. tabs::

   .. tab:: Binary Package

      #. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      #. Install the prebuilt Debian package:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-foundationstereo && \
               sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-foundationstereo-models-install

      #. Download and install the pre-trained model files:

         :ir_apt:

         .. tabs::

            .. tab:: FoundationStereo

               .. code:: bash

                  ros2 run isaac_ros_foundationstereo_models_install install_foundationstereo_models.sh --eula \
                     --model_res high_res

               .. note::

                  FoundationStereo supports two fixed resolution configurations:

                  - ``high_res``: 576x960 resolution (default)
                  - ``low_res``: 320x736 resolution (original training resolution)

                  You can set the default model resolution using the ``FOUNDATIONSTEREO_MODEL_RES``
                  environment variable. Use the ``--model_res`` argument to override the default or
                  to explicitly select between these options.

                  The ``high_res`` (576x960) model requires more than 16GB of VRAM, so it only works on GPUs with more than 16GB of VRAM.

            .. tab:: Fast-FoundationStereo

               Fast-FoundationStereo ONNX models are available from the
               `Fast-FoundationStereo GitHub repository <https://github.com/NVlabs/Fast-FoundationStereo>`__.
               Download the recommended ONNX model files from the linked Google Drive folder in the repository:

               - **High Res (576x960):** ``20_30_48_iters_4_res_576x960``
               - **Low Res (320x736):** ``20_30_48_iters_4_res_320x736``

               Place the downloaded ONNX file and convert it to a TensorRT engine:

               .. code:: bash

                  mkdir -p ${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo && \
                     trtexec --onnx=<path_to_downloaded_onnx_file> \
                     --saveEngine=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_576x960.engine \
                     --noTF32

               Repeat for the low resolution model if needed, saving as ``fast_foundationstereo_320x736.engine``.

               .. note::

                  Fast-FoundationStereo is a **research model** released under the
                  `Fast-FoundationStereo license <https://github.com/NVlabs/Fast-FoundationStereo/blob/master/LICENSE.txt>`__
                  and is **not intended for commercial use**. For commercial applications, use FoundationStereo.

   .. tab:: Build from Source

      #. Install Git LFS:

         .. code:: bash

            sudo apt-get install -y git-lfs && git lfs install

      #. Clone this repository under ``${ISAAC_ROS_WS}/src``:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src && \
               git clone :ir_clone:`<isaac_ros_dnn_stereo_depth>`

      #. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      #. Use ``rosdep`` to install the package's dependencies:

         :ir_apt:

         .. code:: bash

            rosdep update && rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo --ignore-src -y

      #. Download and install the pre-trained model files:

         .. tabs::

            .. tab:: FoundationStereo

               .. code:: bash

                  sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-foundationstereo-models-install && \
                     ros2 run isaac_ros_foundationstereo_models_install install_foundationstereo_models.sh --eula \
                     --model_res high_res

               .. note::

                  FoundationStereo supports two fixed resolution configurations:

                  - ``high_res``: 576x960 resolution (default)
                  - ``low_res``: 320x736 resolution (original training resolution)

                  You can set the default model resolution using the ``FOUNDATIONSTEREO_MODEL_RES``
                  environment variable. Use the ``--model_res`` argument to override the default or
                  to explicitly select between these options.

                  The ``high_res`` (576x960) model requires more than 16GB of VRAM, so it only works on GPUs with more than 16GB of VRAM.

            .. tab:: Fast-FoundationStereo

               Fast-FoundationStereo ONNX models are available from the
               `Fast-FoundationStereo GitHub repository <https://github.com/NVlabs/Fast-FoundationStereo>`__.
               Download the recommended ONNX model files from the linked Google Drive folder in the repository:

               - **High Res (576x960):** ``20_30_48_iters_4_res_576x960``
               - **Low Res (320x736):** ``20_30_48_iters_4_res_320x736``

               Place the downloaded ONNX file and convert it to a TensorRT engine:

               .. code:: bash

                  mkdir -p ${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo && \
                     trtexec --onnx=<path_to_downloaded_onnx_file> \
                     --saveEngine=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_576x960.engine \
                     --noTF32

               Repeat for the low resolution model if needed, saving as ``fast_foundationstereo_320x736.engine``.

               .. warning::

                  Fast-FoundationStereo is a **research model** released under the
                  `Fast-FoundationStereo license <https://github.com/NVlabs/Fast-FoundationStereo/blob/master/LICENSE.txt>`__
                  and is **not intended for commercial use**. For commercial applications, use FoundationStereo.

      #. Build the package from source:

         .. code:: bash

            cd ${ISAAC_ROS_WS} && \
               colcon build --packages-up-to isaac_ros_foundationstereo --base-paths ${ISAAC_ROS_WS}/src/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo

      #. Source the ROS workspace:

         .. note::

            Make sure to repeat this step in **every** terminal created inside the Isaac ROS environment.

            Because this package was built from source, the enclosing workspace must be sourced for
            ROS to be able to find the package's contents.

         .. code:: bash

            source install/setup.bash

Run Launch File
^^^^^^^^^^^^^^^

.. tabs::

  .. tab:: Rosbag

      #. Continuing inside the Isaac ROS environment, install the following dependencies:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-examples

      #. Run the following launch file to spin up a demo using the quickstart rosbag:

         .. tabs::

            .. tab:: FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS:?}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_576x960.engine

            .. tab:: FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS:?}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_320x736.engine \
                     model_input_width:=736 model_input_height:=320

            .. tab:: Fast-FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS:?}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_576x960.engine

            .. tab:: Fast-FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS:?}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_320x736.engine \
                     model_input_width:=736 model_input_height:=320

      #.  Open a **second terminal** and attach to the container:

         .. code:: bash

            isaac-ros activate

      #.  In the **second terminal**, play the FoundationStereo sample rosbag downloaded in the quickstart assets:

         .. code:: bash

            ros2 bag play -l ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationstereo/rosbags/foundationstereo_rosbag \
               --remap /left/camera_info:=/left/camera_info_rect /right/camera_info:=/right/camera_info_rect

  .. tab:: RealSense Camera

      .. note::

         This tutorial requires a compatible RealSense camera from
         the list of available
         :doc:`cameras </getting_started/sensors/realsense_setup>`.

      #. Ensure that you have already set up your RealSense camera using the :doc:`RealSense setup tutorial </getting_started/sensors/realsense_setup>`. If you have not, set up the sensor and then restart this quickstart from the beginning.

      #. Continuing inside the Isaac ROS environment, install the following dependencies:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-examples ros-:ir_ros_distro:-isaac-ros-realsense

      #. Complete steps to set up the FoundationStereo model as described in the
         :ref:`quickstart <repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo/index:quickstart>`.

      #. Continuing inside the Isaac ROS environment, run the following launch file to spin up a demo using a RealSense stereo camera:

         .. note::

            The RealSense camera defaults to a high frame rate (90 FPS) which can outrun FoundationStereo
            inference, causing the streams to drop and the disparity output to stall within a minute of starting.
            The commands below pass ``realsense_config_file`` pointing to ``realsense_stereo_low_fps.yaml``
            (provided in this package's ``config`` directory), which lowers the infra streams to 15 FPS so the
            camera does not outrun inference. If you still encounter drops, try the low resolution model or
            lower the frame rate further by editing the profiles in that config file (supported 640x360 rates:
            90, 60, 30, 15, 6).

         .. tabs::

            .. tab:: FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=realsense_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_576x960.engine \
                     realsense_config_file:=$(ros2 pkg prefix isaac_ros_foundationstereo --share)/config/realsense_stereo_low_fps.yaml

            .. tab:: FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=realsense_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_320x736.engine \
                     model_input_width:=736 model_input_height:=320 \
                     realsense_config_file:=$(ros2 pkg prefix isaac_ros_foundationstereo --share)/config/realsense_stereo_low_fps.yaml

            .. tab:: Fast-FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=realsense_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_576x960.engine \
                     realsense_config_file:=$(ros2 pkg prefix isaac_ros_foundationstereo --share)/config/realsense_stereo_low_fps.yaml

            .. tab:: Fast-FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=realsense_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_320x736.engine \
                     model_input_width:=736 model_input_height:=320 \
                     realsense_config_file:=$(ros2 pkg prefix isaac_ros_foundationstereo --share)/config/realsense_stereo_low_fps.yaml

  .. tab:: ZED Camera

      #. Ensure that you have already set up your ZED camera using :doc:`ZED setup tutorial </getting_started/sensors/zed_setup>`.

      #. Continuing inside the Isaac ROS environment, install dependencies:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-examples ros-:ir_ros_distro:-isaac-ros-depth-image-proc ros-:ir_ros_distro:-isaac-ros-stereo-image-proc ros-:ir_ros_distro:-isaac-ros-zed

         .. tabs::

            .. tab:: FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=zed_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_576x960.engine \
                     interface_specs_file:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationstereo/zed2_quickstart_interface_specs.json \
                     pub_frame_rate:=15.0

            .. tab:: FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=zed_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/foundationstereo/deployable_v2.0/foundationstereo_320x736.engine \
                     interface_specs_file:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationstereo/zed2_quickstart_interface_specs.json \
                     model_input_width:=736 model_input_height:=320 \
                     pub_frame_rate:=15.0

            .. tab:: Fast-FoundationStereo High Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=zed_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_576x960.engine \
                     interface_specs_file:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationstereo/zed2_quickstart_interface_specs.json \
                     pub_frame_rate:=15.0

            .. tab:: Fast-FoundationStereo Low Res

               .. code:: bash

                  ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=zed_stereo_rect,foundationstereo \
                     engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/fast_foundationstereo/fast_foundationstereo_320x736.engine \
                     interface_specs_file:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationstereo/zed2_quickstart_interface_specs.json \
                     model_input_width:=736 model_input_height:=320 \
                     pub_frame_rate:=15.0

         .. note::

            If you are using the `ZED X` series, replace  `zed2_quickstart_interface_specs.json` with `zedx_quickstart_interface_specs.json` in the above commands.

         .. note::

            The ``pub_frame_rate:=15.0`` argument throttles the ZED node's publish rate to 15 FPS so the camera
            does not outrun FoundationStereo inference (which would otherwise cause dropped/out-of-sync frames
            and stalled disparity output). Lower this value further if you still observe drops with the high
            resolution model.

Visualize Output
^^^^^^^^^^^^^^^^

.. tabs::
   .. tab:: Visualizer Script

      #.  Open a **terminal** and attach to the container:

         .. code:: bash

            isaac-ros activate

      #.  In the **terminal**, visualize and validate the disparity output using the visualizer script:

         .. code:: bash

            ros2 run isaac_ros_dnn_stereo_decoder isaac_ros_dnn_stereo_visualizer.py

         The example result is:

         .. figure:: :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo/warehouse.png>`
            :align: center

   .. tab:: Foxglove

      Connect Foxglove Studio and setup an `Image` panel to visualize depth image using topic `/depth`.

Try More Examples
-----------------

To continue your exploration, check out the following suggested examples:

.. toctree::
   :maxdepth: 1

   Tutorial with Isaac Sim </concepts/stereo_depth/foundationstereo/tutorial_isaac_sim>

   Visualize FoundationStereo Disparity Output </concepts/stereo_depth/foundationstereo/visualize_image>

Isaac ROS Troubleshooting
^^^^^^^^^^^^^^^^^^^^^^^^^

For solutions to problems with Isaac ROS, refer to :doc:`Troubleshooting </troubleshooting/index>`.


API
---

Overview
^^^^^^^^

The ``isaac_ros_foundationstereo`` package offers functionality to generate a stereo
disparity map from stereo images using a trained FoundationStereo or Fast-FoundationStereo model. Given a pair
of stereo input images, the package generates a continuous disparity
image for the left input image. Fast-FoundationStereo is a drop-in replacement—simply
provide the Fast-FoundationStereo engine file path instead.

The package uses the :doc:`DNNStereoDecoderNode </repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_dnn_stereo_decoder/index>`
from the ``isaac_ros_dnn_stereo_decoder`` package to process the model output and generate the disparity map.

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_foundationstereo isaac_ros_foundationstereo.launch.py engine_file_path:=<your FoundationStereo engine plan absolute path>

Input Restrictions
~~~~~~~~~~~~~~~~~~

#. The input left and right images must have the **same dimension and
   resolution**, and the resolution must be **divisible by 32**.

Output Interpretations
~~~~~~~~~~~~~~~~~~~~~~

#. The ``isaac_ros_foundationstereo`` package outputs a disparity image with dimension same as the FoundationStereo model output dimension.

   The input images are rescaled and padded to the FoundationStereo model input dimension
   before inferencing. The disparity output is published as a continuous disparity map.

#. The disparity output is filtered to remove invalid values:
   - Values below ``min_disparity`` (default: 0.0)
   - Values above ``max_disparity`` (default: 10000.0)
   - Invalid regions (inf, Nan) are set to 0.0

#. The right ``CameraInfo`` is used to composite a
   ``NitrosDisparityImage``. If you only care about the disparity
   image, and don't need the baseline and focal length information, you
   can pass dummy camera messages.

.. |package_name| replace:: ``isaac_ros_foundationstereo``
